--- a/index.html
+++ b/index.html
@@ -664,5 +664,11 @@
             Probar Comercio
         </button>
     </div>
+    <!-- Botón: ir a Gastronomía Independiente -->
+    <div style="text-align:center; margin: 16px 0;">
+        <button id="go-gastronomia-independiente" onclick="location.href='gastronomia-independiente.html'" style="padding:10px 14px; border-radius:10px; border:1px solid #ccc; cursor:pointer;">
+            Ir a Gastronomía Independiente
+        </button>
+    </div>
 </body>
 </html>
