--- a/gastronomia.html
+++ b/gastronomia.html
@@ -201,7 +201,7 @@
                         <!-- Destacado 3 -->
                         <div class="product-card discount-card searchable-item" id="destacado3">
                             <div class="product-image">
-                                <img src="Imagenes/ensalada cesar.webp" alt="Ensalada César" width="800" height="600" loading="lazy" fetchpriority="high" decoding="async">
+                                <img src="Imagenes/ensaladacesar.webp" alt="Ensalada César" width="800" height="600" loading="lazy" fetchpriority="high" decoding="async">
                             </div>
                             <div class="product-info">
                                 <h3>Ensalada César</h3>
@@ -377,7 +377,7 @@
             <div class="products-grid">
                 <div class="product-card searchable-item" id="plato1" data-food-category="pizzas, comen-dos">
                     <div class="product-image">
-                        <img src="Imagenes/PIZZA MARGARITA.webp" alt="Pizza Margarita" width="800" height="600" loading="lazy">
+                        <img src="Imagenes/PIZZAMARGARITA.webp" alt="Pizza Margarita" width="800" height="600" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3>Pizza Margarita</h3>
@@ -401,7 +401,7 @@
 
                 <div class="product-card searchable-item" id="plato3" data-food-category="ensaladas">
                     <div class="product-image">
-                        <img src="Imagenes/ensalada cesar.webp" alt="Ensalada César" width="800" height="600" loading="lazy" fetchpriority="high" decoding="async">
+                        <img src="Imagenes/ensaladacesar.webp" alt="Ensalada César" width="800" height="600" loading="lazy" fetchpriority="high" decoding="async">
                     </div>
                     <div class="product-info">
                         <h3>Ensalada César</h3>
@@ -413,7 +413,7 @@
 
                 <div class="product-card searchable-item" id="plato4" data-food-category="bebidas">
                     <div class="product-image">
-                        <img src="Imagenes/Limonada-casera.jpg" alt="Limonada Casera" width="800" height="600" loading="lazy">
+                        <img src="Imagenes/Limonadacasera.jpg" alt="Limonada Casera" width="800" height="600" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3>Limonada Casera</h3>
@@ -457,7 +457,7 @@
                 <div class="product-card searchable-item" id="interest-product-2x1">
                     <div class="interest-badge">2x1</div>
                     <div class="product-image">
-                        <img src="Imagenes/PIZZA MARGARITA.webp" alt="Pizza Margarita 2x1" width="800" height="600" loading="lazy">
+                        <img src="Imagenes/PIZZAMARGARITA.webp" alt="Pizza Margarita 2x1" width="800" height="600" loading="lazy">
                     </div>
                     <div class="product-info">
                         <h3>Pizza Margarita 2x1</h3>
@@ -573,7 +573,7 @@
     </footer>
 
     <!-- Modal de producto (compatible con scrip.js) -->
-    <div id="product-modal" style="display: none;" role="dialog" aria-modal="true" aria-hidden="true" aria-labelledby="modal-product-title" aria-describedby="modal-product-description" tabindex="-1">
+    <div id="product-modal" class="product-modal" role="dialog" aria-modal="true" aria-hidden="true" aria-labelledby="modal-product-title" aria-describedby="modal-product-description" tabindex="-1">
       <div class="modal-content">
         <button class="close-modal" aria-label="Cerrar modal" title="Cerrar"><i class="fas fa-times" aria-hidden="true"></i></button>
         <div class="modal-body">
